Mon Nov 29 17:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMatrix.m: Memory bounds error fixed.
	* Source/NSOpenPanel.m: use any supplied filetype as denoting a file
	package for the purposes of differentiating between packages and
	directories.  Also - better fix for selecting directories when
	multiple selection is allowed.

Mon Nov 29 11:43:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: rewrite with new nib loading method.
	* Source/GNUmakefile: Added NSNibConnector.h
	* Headers/AppKit/NSNibConnector.h: new file
	* Headers/AppKit/NSNibLoading.h: Update

Mon Nov 29  6:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: ([-iconWindow]) new (non-standard) method.
	* Source/NSWindow.m: ([-orderWindow:relativeTo:]) added code to
	resign key/main window status on ordering out.  Also, set up a new
	key/main window - if no suitable candidates are available, use the
	app icon window or the main menu window.

Sun Nov 28 19:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSOpenPanel.m: ([-filenames]) fix to handle multiple
	selection correctly - was duplicating name of selected item.

Sun Nov 28 04:44:43 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	First implementation of editing in NSForm, NSMatrix.
	* Source/NSFormCell.m ([-initTextCell:]): Set editable by default.
	* Source/NSForm.m ([-selectTextAtIndex:]): Implemented.
	* Source/NSMatrix.m: Started work of prefixing ivars with underscore; 
	([-selectText:]): Implemented.
	([-selectTextAtRow:column:]): Implemented.
	([-textDidBeginEditing:]): Implemented.
	([-textDidChange:]): Implemented.
	([-textDidEndEditing:]): Implemented.
	([-textShouldBeginEditing:]): Implemented.
	([-textShouldEndEditing:]): Implemented.
	([-tabKeyTraversesCells]): Implemented.
	([-setTabKeyTraversesCells:]): Implemented.	
	([-mouseDown:]): Added code to start editing if needed.
	([-setDelegate:]): Implemented.